--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 lib-sources
 src/*
-!src/backend/*
-!src/clients/*
-!src/gui/*
-!src/launchers/*
-!src/libs/*
-!src/utils/*
+!src/backend
+!src/clients
+!src/gui
+!src/launchers
+!src/libs
+!src/utils
 !src/CMakeLists.txt
