Added Lobby View

--- a/src/New-Mode/CMakeLists.txt
+++ b/src/New-Mode/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(risiko
         view/p_mainmenu.c
         view/p_match_history.c
         view/p_match_result.c
+        view/p_lobby.c
         view/calibrate.c
 )
 
