Migrated the UI Utils from the Virtual Machine

--- a/src/New-Mode/.env
+++ b/src/New-Mode/.env
@@ -1,1 +1,12 @@
-DB_NAME="Whadup Man"
+
+HOST=127.80.0.1
+PORT=3306
+DB=Risiko
+LOGIN_USER=root
+LOGIN_PASS=@A3bdalla
+GUEST_USER="guest_risiko"
+GUEST_PASS="123456"
+MODERATOR_USER="mod_risiko"
+MODERATOR_PASS="123456"
+PLAYER_USER="player_risiko"
+PLAYER_PASS="123456"
