Rechanged Login Procedure Definition

--- a/src/New-Mode/.env
+++ b/src/New-Mode/.env
@@ -1,9 +1,8 @@
-
-HOST=127.80.0.1
-PORT=3306
+HOST=db-risiko-online-do-user-4143221-0.b.db.ondigitalocean.com
+PORT=25060
 DB=Risiko
-LOGIN_USER=root
-LOGIN_PASS=@A3bdalla
+LOGIN_USER=doadmin
+LOGIN_PASS=AVNS_D-XlluGJJ35AkoB9GuW
 GUEST_USER="guest_risiko"
 GUEST_PASS="123456"
 MODERATOR_USER="mod_risiko"
