Controller Cleanup Improvements

--- a/src/New-Mode/CMakeLists.txt
+++ b/src/New-Mode/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(Threads REQUIRED)
 
 add_executable(risiko
         launcher.c
+        controller/moderator.c
         controller/player.c
         controller/login.c
         model/db.c
