Added the matches list structure

--- a/src/New-Mode/.env
+++ b/src/New-Mode/.env
@@ -3,9 +3,7 @@ PORT=25060
 DB=Risiko
 LOGIN_USER=doadmin
 LOGIN_PASS=AVNS_D-XlluGJJ35AkoB9GuW
-GUEST_USER="guest_risiko"
-GUEST_PASS="123456"
-MODERATOR_USER="mod_risiko"
-MODERATOR_PASS="123456"
-PLAYER_USER="player_risiko"
-PLAYER_PASS="123456"
+MODERATOR_USER=Moderator
+MODERATOR_PASS=mod_pass
+PLAYER_USER=Player
+PLAYER_PASS=player_pass
