Implemented all the MYSQL Procedure Calls for the Moderator

--- a/src/New-Mode/.env
+++ b/src/New-Mode/.env
@@ -1,8 +1,8 @@
 HOST=db-risiko-online-do-user-4143221-0.b.db.ondigitalocean.com
 PORT=25060
 DB=Risiko
-LOGIN_USER=doadmin
-LOGIN_PASS=AVNS_D-XlluGJJ35AkoB9GuW
+LOGIN_USER=Login
+LOGIN_PASS=login_pass
 MODERATOR_USER=Moderator
 MODERATOR_PASS=mod_pass
 PLAYER_USER=Player
